configurable log level in test

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -9,7 +9,5 @@ dynamodb-journal {
 akka.persistence.journal.plugin = "dynamodb-journal"
 akka.persistence.publish-confirmations = on
 akka.persistence.publish-plugin-commands = on
-akka.log-level = DEBUG
-akka.stdout-loglevel = DEBUG
-akka.debug.receive = on
+akka.loglevel = ${LOG_LEVEL}
 akka.event-handlers = ["akka.event.Logging$DefaultLogger"]
