ability to have multiple logical journals in a single dynamo table

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,5 +1,5 @@
 dynamodb-journal {
-    journal-name =  ${JOURNAL_TABLE}
+    journal-table =  ${JOURNAL_TABLE}
     aws-access-key-id =  ${AWS_ACCESS_KEY_ID}
     aws-secret-access-key =  ${AWS_SECRET_ACCESS_KEY}
     operation-timeout =  30 seconds
