--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,4 +2,5 @@ dynamodb-journal {
     endpoint = "https://dynamodb.us-east-1.amazonaws.com"
     class = "akka.persistence.journal.dynamodb.DynamoDBJournal"
     replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+    journal-name = "journal"
 }
