--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,5 +1,6 @@
 dynamodb-journal {
-    journal-name =  "test-journal"
+    journal-table =  "test-journal"
+    journal-name =   "journal"
     aws-access-key-id =  "test123"
     aws-secret-access-key =  "test123"
     operation-timeout =  10 seconds
