Wrap all dynamo ops in withBackoff, fix logging of unprocessed items, use 10K sequence shards in integration test.

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -3,6 +3,7 @@ dynamodb-journal {
     aws-access-key-id =  ${AWS_ACCESS_KEY_ID}
     aws-secret-access-key =  ${AWS_SECRET_ACCESS_KEY}
     operation-timeout =  30 seconds
+    sequence-shards = 10000
 }
 
 akka.persistence.journal.plugin = "dynamodb-journal"
