--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -3,4 +3,5 @@ dynamodb-journal {
     class = "akka.persistence.journal.dynamodb.DynamoDBJournal"
     replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
     journal-name = "journal"
+    sequence-shards = 1000
 }
