better logging in backoffs. add defaults for some spray and akka settings to reference.conf, log dead letters in it load spec.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,6 +2,10 @@ dynamodb-journal {
     endpoint = "https://dynamodb.us-east-1.amazonaws.com"
     class = "akka.persistence.journal.dynamodb.DynamoDBJournal"
     replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+    plugin-dispatcher = "akka.actor.default-dispatcher"
     journal-name = "journal"
     sequence-shards = 1000
 }
+
+spray.can.host-connector.max-connections = 600
+akka.persistence.journal.max-message-batch-size = 4000
