move files into akka.persistence.dynamodb package
also move tests from `it` scope to `test` scope to improve tooling
support

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,7 +3,8 @@ dynamodb-journal {
     journal-name =   "journal"
     aws-access-key-id =  "test123"
     aws-secret-access-key =  "test123"
-    operation-timeout =  10 seconds
+    operation-timeout =  30 seconds
+    sequence-shards = 10000
     endpoint =  "http://localhost:8000"
 }
 
