make it work with Akka 2.4.1 #2
- rename processorId to persistenceId everywhere
- remove obsolete method asyncDeleteMessages
- fix bug when deleting up to Long.MaxValue
- enable request trace logging in DBHelper
- add some override keywords where possible
- reduce default for sequence-shards to 10
- move to DynamoDBJournalConfig object
- fix package declarations to match source folders
- add copyright headers

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,11 +4,13 @@ dynamodb-journal {
     aws-access-key-id =  "test123"
     aws-secret-access-key =  "test123"
     operation-timeout =  30 seconds
-    sequence-shards = 10000
+    sequence-shards = 10
     endpoint =  "http://localhost:8000"
 }
 
 akka.persistence.journal.plugin = "dynamodb-journal"
+akka.persistence.snapshot-store.plugin = "akka.persistence.no-snapshot-store"
 akka.persistence.publish-confirmations = on
 akka.persistence.publish-plugin-commands = on
-akka.event-handlers = ["akka.event.Logging$DefaultLogger"]
+akka.loggers = ["akka.testkit.TestEventListener"]
+akka.loglevel = INFO
