--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,12 +1,57 @@
+# This configures the default settings for all DynamoDB Journal plugin
+# instances in the system. If you are using just one configuration for
+# all persistent actors then you should point your akka.persistence.journal.plugin
+# setting to this section.
+#
+# Otherwise you need to create differently named sections containing
+# only those settings that shall be different from the defaults
+# configured here, importing the defaults like so:
+#
+#   my-dynamodb-journal = ${dynamodb-journal}
+#   my-dynamodb-journal {
+#     <settings...>
+#   }
+#
 dynamodb-journal {
-  endpoint = "https://dynamodb.us-east-1.amazonaws.com"
+
+  # The FQCN for the journal plugin implementation - DO NOT CHANGE
   class = "akka.persistence.dynamodb.journal.DynamoDBJournal"
+  
+  # The service endpoint to connect to for the DynamoDB instance that
+  # shall be used. Please refer to the AWS documentation for details.
+  endpoint = "https://dynamodb.us-east-1.amazonaws.com"
+  
+  # The dispatcher that executes the replay logic for this plugin
+  # instance - should not normally need to be changed.
   replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+  
   client-dispatcher = "dynamodb-journal.blocking-dispatcher"
+  
+  # The dispatcher that executes the write logic for this plugin
+  # instance - should not normally need to be changed.
   plugin-dispatcher = "akka.actor.default-dispatcher"
+  
+  # The name of the DynamoDB table to be used for this plugin instance
+  journal-table = "akka-persistence"
+  
+  # The logical journal name, used in the partition keys.
   journal-name = "journal"
+  
+  # The number of shards to distribute the sequence number items over.
   sequence-shards = 10
+  
+  # The AWS key ID to use for connecting to the specified endpoint.
+  aws-access-key-id = ""
+  
+  # The AWS secret to use in conjuction with the AWS key ID.
+  aws-secret-access-key = ""
+  
+  operation-timeout = 10s
+  
+  # If this is set to `on` then every DynamoDB request will be logged
+  # at DEBUG level. Caution: this will generate A LOT of output.
   tracing = off
+  
   blocking-dispatcher {
     executor = "thread-pool-executor"
   }
