--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,14 +1,12 @@
-dynamodb-journal {
-    journal-table =  "test-journal"
-    journal-name =   "journal"
-    aws-access-key-id =  "test123"
-    aws-secret-access-key =  "test123"
-    operation-timeout =  30 seconds
-    sequence-shards = 10
-    endpoint =  "http://localhost:8000"
+my-dynamodb-journal = ${dynamodb-journal}
+my-dynamodb-journal {
+  journal-table =  "test-journal"
+  journal-name =   "journal"
+  endpoint =  "http://localhost:8000"
+  operation-timeout =  30 seconds
 }
 
-akka.persistence.journal.plugin = "dynamodb-journal"
+akka.persistence.journal.plugin = "my-dynamodb-journal"
 akka.persistence.snapshot-store.plugin = "akka.persistence.no-snapshot-store"
 akka.persistence.publish-confirmations = on
 akka.persistence.publish-plugin-commands = on
