--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,7 +19,7 @@ dynamodb-journal {
   
   # The service endpoint to connect to for the DynamoDB instance that
   # shall be used. Please refer to the AWS documentation for details.
-  endpoint = "https://dynamodb.us-east-1.amazonaws.com"
+  endpoint = ""
   
   # The dispatcher that executes the replay logic for this plugin
   # instance - should not normally need to be changed.
@@ -51,6 +51,49 @@ dynamodb-journal {
   # If this is set to `on` then every DynamoDB request will be logged
   # at DEBUG level. Caution: this will generate A LOT of output.
   tracing = off
+  
+  # Set to `on` to log the detected configuration at INFO level at plugin startup.
+  log-config = off
+  
+  # AWS API limits - DO NOT CHANGE UNLESS YOU KNOW WHAT YOU ARE DOING
+  aws-api-limits {
+    max-batch-get = 100
+    max-batch-write = 25
+    max-item-size = 400000
+  }
+  
+  # AWS client configuration settings, see
+  # http://docs.aws.amazon.com/AWSJavaSDK/latest/javadoc/?com/amazonaws/ClientConfiguration.html
+  #
+  # (setting any of these to the string "default" means that the corresponding
+  # setter method on the ClientConfiguration will not be invoked)
+  aws-client-config {
+    client-execution-timeout = default     # int
+    connection-max-idle-millis = default   # long
+    connection-timeout = default           # int
+    connection-ttl = default               # long
+    local-address = default                # InetAddress
+    max-connections = default              # int
+    max-error-retry = default              # int
+    preemptive-basic-proxy-auth = default  # boolean
+    protocol = default                     # HTTP or HTTPS
+    proxy-domain = default                 # string
+    proxy-host = default                   # string
+    proxy-password = default               # string
+    proxy-port = default                   # int
+    proxy-username = default               # string
+    proxy-workstation = default            # string
+    request-timeout = default              # int
+    response-metadata-cache-size = default # int
+    signer-override = default              # string
+    socket-buffer-size-hints = default     # [ int, int ] (for send & receive)
+    socket-timeout = default               # int
+    use-expect-continue = default          # boolean
+    use-gzip = default                     # boolean
+    use-reaper = default                   # boolean
+    use-tcp-keepalive = default            # boolean
+    user-agent = default                   # string
+  }
   
   blocking-dispatcher {
     executor = "thread-pool-executor"
