switch to AmazonDynamoDBAsyncClient #15
also rewrite the replay logic using Akka Streams to get a handle on
ordered and back-pressured execution of those parallel chunks

fixes #15
fixes #10
fixes #9

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION -J-XX:ReservedCodeCacheSize=256M test
+  - sbt ++$TRAVIS_SCALA_VERSION -J-XX:ReservedCodeCacheSize=256M -Dakka.test.timefactor=2.0 test
   - find $HOME/.sbt -name "*.lock" | xargs rm
   - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
   - find $HOME/.ivy2 -name "ivydata-*.properties"
