--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -48,6 +48,10 @@ dynamodb-journal {
   
   operation-timeout = 10s
   
+  # number of concurrently running replay prefetch operations for a
+  # single PersistentActor
+  replay-parallelism = 10
+  
   # If this is set to `on` then every DynamoDB request will be logged
   # at DEBUG level. Caution: this will generate A LOT of output.
   tracing = off
