--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,7 +3,7 @@ my-dynamodb-journal {
   journal-table =  "test-journal"
   journal-name =   "journal"
   endpoint =  "http://localhost:8000"
-  operation-timeout =  30 seconds
+  tracing = off
 }
 
 akka.persistence.journal.plugin = "my-dynamodb-journal"
