clean up some unused code and add more reference.conf docs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -25,11 +25,14 @@ dynamodb-journal {
   # instance - should not normally need to be changed.
   replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
   
-  client-dispatcher = "dynamodb-journal.blocking-dispatcher"
+  # The dispatcher that executes the future combinators needed for
+  # transforming the AmazonDynamoDBAsyncClient results (i.e.
+  # handling the back-off etc.)
+  client-dispatcher = "dynamodb-journal.dispatcher"
   
   # The dispatcher that executes the write logic for this plugin
   # instance - should not normally need to be changed.
-  plugin-dispatcher = "akka.actor.default-dispatcher"
+  plugin-dispatcher = "dynamodb-journal.dispatcher"
   
   # The name of the DynamoDB table to be used for this plugin instance
   journal-table = "akka-persistence"
@@ -46,10 +49,10 @@ dynamodb-journal {
   # The AWS secret to use in conjuction with the AWS key ID.
   aws-secret-access-key = ""
   
-  operation-timeout = 10s
-  
   # number of concurrently running replay prefetch operations for a
-  # single PersistentActor
+  # single PersistentActor; this prefetch means that during a replay
+  # more events might be retrieved than specified with the `max`
+  # parameter, with corresponding usage DynamoDB read units
   replay-parallelism = 10
   
   # If this is set to `on` then every DynamoDB request will be logged
@@ -99,8 +102,13 @@ dynamodb-journal {
     user-agent = default                   # string
   }
   
-  blocking-dispatcher {
-    executor = "thread-pool-executor"
+  dispatcher {
+    type = Dispatcher
+    executor = "fork-join-executor"
+    fork-join-executor {
+      parallelism-min = 2
+      parallelism-max = 8
+    }
   }
 }
 
