allow AWS client to use default credentials provider, fixes #45

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -44,9 +44,19 @@ dynamodb-journal {
   sequence-shards = 10
   
   # The AWS key ID to use for connecting to the specified endpoint.
+  # Will only be used if aws-secret-access-key is also set.
+  #
+  # It is recommended to leave this (and the aws-secret-access-key) setting
+  # empty in order to use the default credentials provider chain, see
+  # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
   aws-access-key-id = ""
   
   # The AWS secret to use in conjuction with the AWS key ID.
+  # Will only be used if aws-access-key-id is also set.
+  #
+  # It is recommended to leave this (and the aws-access-key-id) setting
+  # empty in order to use the default credentials provider chain, see
+  # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
   aws-secret-access-key = ""
   
   # number of concurrently running replay prefetch operations for a
