--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,6 +3,8 @@ my-dynamodb-journal {
   journal-table =  "test-journal"
   journal-name =   "journal"
   endpoint =  "http://localhost:8000"
+  aws-access-key-id = "set something in case no real creds are there"
+  aws-secret-access-key = "set something in case no real creds are there"
   tracing = off
 }
 
