akka/akka-persistence-dynamodb#98 tail chasing fix

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -6,6 +6,7 @@ my-dynamodb-journal {
   aws-access-key-id = "set something in case no real creds are there"
   aws-secret-access-key = "set something in case no real creds are there"
   tracing = off
+  fixes.high-distrust = true
 }
 
 my-dynamodb-snapshot-store = ${dynamodb-snapshot-store}
