--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -120,6 +120,28 @@ dynamodb-journal {
       parallelism-max = 8
     }
   }
+
+  fixes {
+    # Bug akka/akka-persistence-dynamodb#98 can cause an event source which is written successfully
+    # and is valid, but where the High Sequence number marker is missing. This causes incomplete
+    # replay of the event source. A root cause fix prevents this from occurring, but does not
+    # repair existing event sources. Writing new events to incompletely replayed persistent actors
+    # will corrupt the event source. If write aligns with an atomic write this will be hidden.
+    # This fix cannot recover corrupted event sources, but it attempts to avoid corruption from
+    # taking place where this hasn't happened yet. It does so by not fully trusting the high mark.
+    # If the last event in a partition is 99, it will attempt to chase the tail of the event
+    # source. This guards valid event sources with hidden tails from incomplete replay.
+    # For event sources not suffering from this problem there's 1% chance that this leads to a
+    # useless query.
+    # This is a performance/consistency tradeoff to be made. It should not be required for newly
+    # created event sources that have the root cause fix, hence it is off by default.
+    # NOTE: With current implementation of the high mark being written after the events,
+    # there is a slim chance that a valid event source is written, but a network error occurs 
+    # before the high mark is written. In this case the write would be reported as failed to the
+    # writing party. Whether you want to "keep the event source" is up for discussion. But this fix
+    # would also recover from that situation.
+    high-distrust = false
+  }
 }
 dynamodb-snapshot-store {
 
