Implement akka persistence query (#111)
* Implement currentPersistenceIds query

* Implement currentEventsByPersistenceId query

* Use dynamodb query with GSI to get persistence ids

* Use dynamodb 'query' for currentPersistenceIds

* Test currentEventsByPersistenceId

* Support toSequenceNr=Int.MaxValue

* Test currentEventsByPersistenceId in combination with deletion

* Test currentPersistenceIds

* Document configuration of readjournal in readme.md

* Implement resumable currentPersistenceIds query

Co-authored-by: Corey O'Connor <coreyoconnor@gmail.com>

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -192,3 +192,12 @@ dynamodb-snapshot-store {
   }
 }
 
+dynamodb-read-journal = ${dynamodb-journal}
+dynamodb-read-journal {
+
+  class = "akka.persistence.dynamodb.query.DynamodbReadJournalProvider"
+
+  # The name of the Global Secondary Index that is used to query currentPersistenceIds
+  # see CreatePersistenceIdsIndex.createPersistenceIdsIndexRequest
+  persistence-ids-index-name: "persistence-ids-idx"
+}
