--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -24,3 +24,12 @@ akka.persistence.publish-confirmations = on
 akka.persistence.publish-plugin-commands = on
 akka.loggers = ["akka.testkit.TestEventListener"]
 akka.loglevel = INFO
+
+dynamodb-read-journal {
+  persistence-ids-index-name: "my-persistence-ids-idx"
+
+  journal-table =  "test-journal"
+  endpoint =  "http://localhost:8888"
+  aws-access-key-id = "AWS_ACCESS_KEY_ID"
+  aws-secret-access-key = "AWS_SECRET_ACCESS_KEY"
+}
