parent 58969c8e8ab46697d5ae0b1787005dd31bcf4d9a author PJ Fanning <pjfanning@users.noreply.github.com> 1676151555 +0100 committer PJ Fanning <pjfanning@users.noreply.github.com> 1677091353 +0100
start process of uptaking pekko jars

compile issue

scalafmt

try to fix tests

stray imports

config names

try to fix some tests

Update CurrentPersistenceIdsSpec.scala

Update CurrentPersistenceIdsSpec.scala

Update CurrentPersistenceIdsSpec.scala

Update application.conf

update tests

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 # This configures the default settings for all DynamoDB Journal plugin
 # instances in the system. If you are using just one configuration for
-# all persistent actors then you should point your akka.persistence.journal.plugin
+# all persistent actors then you should point your pekko.persistence.journal.plugin
 # setting to this section.
 #
 # Otherwise you need to create differently named sections containing
@@ -15,7 +15,7 @@
 dynamodb-journal {
 
   # The FQCN for the journal plugin implementation - DO NOT CHANGE
-  class = "akka.persistence.dynamodb.journal.DynamoDBJournal"
+  class = "org.apache.pekko.persistence.dynamodb.journal.DynamoDBJournal"
 
   # The service endpoint to connect to for the DynamoDB instance that
   # shall be used. Please refer to the AWS documentation for details.
@@ -23,7 +23,7 @@ dynamodb-journal {
 
   # The dispatcher that executes the replay logic for this plugin
   # instance - should not normally need to be changed.
-  replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+  replay-dispatcher = "pekko.persistence.dispatchers.default-replay-dispatcher"
 
   # The dispatcher that executes the future combinators needed for
   # transforming the AmazonDynamoDBAsyncClient results (i.e.
@@ -35,7 +35,7 @@ dynamodb-journal {
   plugin-dispatcher = "dynamodb-journal.dispatcher"
 
   # The name of the DynamoDB table to be used for this plugin instance
-  journal-table = "akka-persistence"
+  journal-table = "pekko-persistence"
 
   # The logical journal name, used in the partition keys.
   journal-name = "journal"
@@ -145,7 +145,7 @@ dynamodb-journal {
 }
 dynamodb-snapshot-store {
 
-  class="akka.persistence.dynamodb.snapshot.DynamoDBSnapshotStore"
+  class="org.apache.pekko.persistence.dynamodb.snapshot.DynamoDBSnapshotStore"
 
   # The service endpoint to connect to for the DynamoDB instance that
   # shall be used. Please refer to the AWS documentation for details.
@@ -157,7 +157,7 @@ dynamodb-snapshot-store {
   client-dispatcher = ${dynamodb-journal.client-dispatcher}
 
   # The name of the DynamoDB table to be used for this plugin instance
-  snapshot-table = "akka-persistence-snapshot"
+  snapshot-table = "pekko-persistence-snapshot"
 
   # The logical journal name for which we persist snapshots, used in the partition keys.
   journal-name = ${dynamodb-journal.journal-name}
@@ -195,7 +195,7 @@ dynamodb-snapshot-store {
 dynamodb-read-journal = ${dynamodb-journal}
 dynamodb-read-journal {
 
-  class = "akka.persistence.dynamodb.query.DynamoDBReadJournalProvider"
+  class = "org.apache.pekko.persistence.dynamodb.query.DynamoDBReadJournalProvider"
 
   # The name of the Global Secondary Index that is used to query currentPersistenceIds
   # see CreatePersistenceIdsIndex.createPersistenceIdsIndexRequest
