--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -18,9 +18,7 @@ my-dynamodb-snapshot-store {
   tracing = off
 }
 
-akka {
-  loggers = ["akka.testkit.TestEventListener"]
-  loglevel = INFO
+pekko {
   actor {
     allow-java-serialization = on
   }
@@ -30,6 +28,8 @@ akka {
     publish-confirmations = on
     publish-plugin-commands = on
   }
+  loggers = ["org.apache.pekko.testkit.TestEventListener"]
+  loglevel = INFO
 }
 
 dynamodb-read-journal {
