--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -18,12 +18,19 @@ my-dynamodb-snapshot-store {
   tracing = off
 }
 
-akka.persistence.journal.plugin = "my-dynamodb-journal"
-akka.persistence.snapshot-store.plugin = "my-dynamodb-snapshot-store"
-akka.persistence.publish-confirmations = on
-akka.persistence.publish-plugin-commands = on
-akka.loggers = ["akka.testkit.TestEventListener"]
-akka.loglevel = INFO
+akka {
+  loggers = ["akka.testkit.TestEventListener"]
+  loglevel = INFO
+  actor {
+    allow-java-serialization = on
+  }
+  persistence {
+    journal.plugin = "my-dynamodb-journal"
+    snapshot-store.plugin = "my-dynamodb-snapshot-store"
+    publish-confirmations = on
+    publish-plugin-commands = on
+  }
+}
 
 dynamodb-read-journal {
   persistence-ids-index-name: "my-persistence-ids-idx"
