--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: Apache-2.0
+
 # This configures the default settings for all DynamoDB Journal plugin
 # instances in the system. If you are using just one configuration for
 # all persistent actors then you should point your pekko.persistence.journal.plugin
