--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: Apache-2.0
+
 my-dynamodb-journal = ${dynamodb-journal}
 my-dynamodb-journal {
   journal-table =  "test-journal"
