--- a/.github/workflows/publish-nightly.yml
+++ b/.github/workflows/publish-nightly.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           NEXUS_USER: ${{ secrets.NEXUS_USER }}
           NEXUS_PW: ${{ secrets.NEXUS_PW }}
-        run: sbt +publish
+        run: sbt +publish sonatypeBundleRelease
 
       - name: Cache Coursier cache
         uses: coursier/cache-action@v6.4.0
