--- a/.github/workflows/check-build-test.yml
+++ b/.github/workflows/check-build-test.yml
@@ -40,7 +40,7 @@ jobs:
         uses: coursier/cache-action@v6.4.0
 
       - name: Compile all code with default compiler
-        run: sbt "headerCheckAll; Test/compile"
+        run: sbt "Test/compile"
 
   test:
     name: Build and Test
