Add protected tags to .asf.yaml

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -10,7 +10,10 @@ github:
     - scala
     - dynamodb
     - journal
-  
+
+  protected_tags:
+    - "v*.*.*"
+
   features:
     # Enable wiki for documentation
     wiki: false
