update doc links and reduce Akka links

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -50,15 +50,15 @@ dynamodb-journal {
   #
   # It is recommended to leave this (and the aws-secret-access-key) setting
   # empty in order to use the default credentials provider chain, see
-  # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
+  # https://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
   aws-access-key-id = ""
 
-  # The AWS secret to use in conjuction with the AWS key ID.
+  # The AWS secret to use in conjunction with the AWS key ID.
   # Will only be used if aws-access-key-id is also set.
   #
   # It is recommended to leave this (and the aws-access-key-id) setting
   # empty in order to use the default credentials provider chain, see
-  # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
+  # https://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
   aws-secret-access-key = ""
 
   # number of concurrently running replay prefetch operations for a
@@ -82,7 +82,7 @@ dynamodb-journal {
   }
 
   # AWS client configuration settings, see
-  # http://docs.aws.amazon.com/AWSJavaSDK/latest/javadoc/?com/amazonaws/ClientConfiguration.html
+  # https://docs.aws.amazon.com/AWSJavaSDK/latest/javadoc/?com/amazonaws/ClientConfiguration.html
   #
   # (setting any of these to the string "default" means that the corresponding
   # setter method on the ClientConfiguration will not be invoked)
@@ -169,7 +169,7 @@ dynamodb-snapshot-store {
   #
   # It is recommended to leave this (and the aws-secret-access-key) setting
   # empty in order to use the default credentials provider chain, see
-  # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
+  # https://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
   aws-access-key-id = ${dynamodb-journal.aws-access-key-id}
 
   # The AWS secret to use in conjuction with the AWS key ID.
@@ -177,7 +177,7 @@ dynamodb-snapshot-store {
   #
   # It is recommended to leave this (and the aws-access-key-id) setting
   # empty in order to use the default credentials provider chain, see
-  # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
+  # https://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html#using-the-default-credential-provider-chain
   aws-secret-access-key = ${dynamodb-journal.aws-secret-access-key}
 
   # If this is set to `on` then every DynamoDB request will be logged
