Setup dependabot for alerts
(cherry picked from commit 1e96b39ab466902891c4588382087b91be1a25b8)

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -14,6 +14,9 @@ github:
   protected_tags:
     - "v*.*.*"
 
+  dependabot_alerts: true
+  dependabot_updates: false
+
   features:
     # Enable wiki for documentation
     wiki: true
