--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -9,7 +9,7 @@ jobs:
   scala-steward:
     runs-on: ubuntu-22.04
     name: Launch Scala Steward
-    if: github.repository == 'apache/pekko'
+    if: github.repository == 'apache/pekko-persistence-dynamodb'
     steps:
       - name: Launch Scala Steward
         uses: scala-steward-org/scala-steward-action@v2
