--- a/.asf.yaml
+++ b/.asf.yaml
@@ -61,3 +61,4 @@ notifications:
   issues:               notifications@pekko.apache.org
   pullrequests:         notifications@pekko.apache.org
   discussions:          notifications@pekko.apache.org
+  jobs:                 notifications@pekko.apache.org
