--- a/.github/workflows/dependency-graph.yml
+++ b/.github/workflows/dependency-graph.yml
@@ -1,12 +1,13 @@
 name: Update Dependency Graph
 on:
+  pull_request:
   push:
     branches:
       - main # default branch of the project
 jobs:
   dependency-graph:
     name: Update Dependency Graph
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.0.4
     steps:
       - uses: actions/checkout@v4
       - uses: sbt/setup-sbt@v1
