--- a/.github/workflows/check-build-test.yml
+++ b/.github/workflows/check-build-test.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   check-code-compilation:
     name: Check Code Compilation
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,6 +32,9 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
+    
+      - name: Install sbt
+        uses: sbt/setup-sbt@v1
 
       - name: Cache Coursier cache
         uses: coursier/cache-action@v6
@@ -41,7 +44,7 @@ jobs:
 
   test:
     name: Build and Test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [check-code-compilation]
     strategy:
       fail-fast: false
@@ -70,6 +73,9 @@ jobs:
         with:
           distribution: temurin
           java-version: ${{ matrix.java-version }}
+
+      - name: Install sbt
+        uses: sbt/setup-sbt@v1          
 
       - name: Cache Coursier cache
         uses: coursier/cache-action@v6
